--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,13 @@
 {
   "branches": [
-    "master",
-    "main"
+    {
+      "name": "master"
+    },
+    {
+      "name": "legacy/v7",
+      "range": "7.x",
+      "channel": "7.x"
+    }
   ],
   "tagFormat": "v${version}",
   "plugins": [
